Another blind shot at fixing title z-index issues

--- a/static/styles.css
+++ b/static/styles.css
@@ -119,6 +119,10 @@ footer {
     z-index: 2;
   }
 
+  #header h1 {
+    z-index: 2;
+  }
+
   #article {
     width: 55em;
     margin: 1em auto;
@@ -151,7 +155,10 @@ footer {
     /* left: 40em; */
     /* width: 100px; */
     font-family: Menlo, Consolas, monospace;
-    z-index: 0;
+    z-index: 1;
+  }
+
+  #logo, #logo a, #logo img {
   }
 
   #breadcrumb {
